--- a/SecondLab/app/src/main/res/values/strings.xml
+++ b/SecondLab/app/src/main/res/values/strings.xml
@@ -1,3 +1,24 @@
 <resources>
     <string name="app_name">SecondLab</string>
+
+    <string name="gender">Пол</string>
+    <string name="male">Мужской</string>
+    <string name="female">Женский</string>
+
+    <string name="weight">Вес</string>
+    <string name="height">Рост</string>
+    <string name="age">Возраст</string>
+
+    <string name="activity_level">Уровень активности</string>
+    <string name="not_active">Малоподвижный образ жизни</string>
+    <string name="regular_active">Обычная физнагрузка</string>
+    <string name="very_active">Интенсивная физнагрузка</string>
+
+    <string name="centimetre">см</string>
+    <string name="kilos">кг</string>
+    <string name="years">лет</string>
+
+    <string name="calculate">Рассчитать результат</string>
+
+    <string name="result_toast">Вам необходимо потреблять %1$s ККал</string>
 </resources>
