--- a/Lab5/app/src/main/res/values/strings.xml
+++ b/Lab5/app/src/main/res/values/strings.xml
@@ -15,7 +15,16 @@
     <string name="social_network_link">Social Network</string>
     <string name="contact_form">Contact form</string>
 
-    <!-- contact creation-->
+    <!-- contact manipulation-->
     <string name="contact_created">Contact created</string>
     <string name="contact_create_error">Unable to create a contact</string>
+    <string name="contact_deleted">Contact %1$s was deleted</string>
+    <string name="contact_updated">Contact was successfully updated</string>
+    <string name="contact_update_error">Unable to update a contact</string>
+    <string name="remove_selected">Contacts removed %1$d</string>
+
+    <!--    items menu-->
+    <string name="delete_item">Delete</string>
+    <string name="edit_item">Edit</string>
+    <string name="open_contact">Open</string>
 </resources>
