--- a/Lab3/app/src/main/res/values/strings.xml
+++ b/Lab3/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="empty_note_field">Введите заметку</string>
     <string name="note_deleted">Заметка удалена</string>
     <string name="note_is_not_exists">Заметки не существует</string>
+    <string name="select_mode_external">Режим External</string>
 </resources>
