--- a/Lab5/app/src/main/res/values/strings.xml
+++ b/Lab5/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
     <string name="contact_updated">Contact was successfully updated</string>
     <string name="contact_update_error">Unable to update a contact</string>
     <string name="remove_selected">Contacts removed %1$d</string>
-
+    <string name="select_to_remove">Select contacts to remove</string>
     <!--    items menu-->
     <string name="delete_item">Delete</string>
     <string name="edit_item">Edit</string>
