--- a/lab8/app/src/main/res/values/strings.xml
+++ b/lab8/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">lab8</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="contacts">Contacts</string>
+    <string name="phone">Phone</string>
+    <string name="name">Name</string>
+    <string name="location">Location</string>
+    <string name="vk">VK</string>
 </resources>
