--- a/Lab9/app/src/main/res/values/strings.xml
+++ b/Lab9/app/src/main/res/values/strings.xml
@@ -8,6 +8,10 @@
     <string name="action_settings">Settings</string>
 
     <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_list">List</string>
+
+
+<!--    contacts-->
+    <string name="name">Name</string>
+    <string name="phone">Phone</string>
 </resources>
