--- a/lab10/app/src/main/res/values/strings.xml
+++ b/lab10/app/src/main/res/values/strings.xml
@@ -1,9 +1,18 @@
 <resources>
     <string name="app_name">lab10</string>
-
-
     <!--    contacts-->
     <string name="name">Name</string>
     <string name="phone">Phone</string>
-    <string name="create_contact">Create contact</string>
+
+    <!--    Context menu-->
+    <string name="update">Update</string>
+    <string name="delete">Delete</string>
+
+    <!--    New Contact-->
+    <string name="new_contact">New Contact</string>
+
+    <!--    Buttons-->
+    <string name="create">Create</string>
+    <string name="save">Save</string>
+    <string name="required_fields">Please insert the name and phone</string>
 </resources>
